2020/4/6  HPにアニメーションを追加

--- a/テストhtml/index.html
+++ b/テストhtml/index.html
@@ -17,14 +17,29 @@
             </a>
             <div class="menu-bar">
                 <ul>
-                    <li></li>
+                    <a class="underline" href="">
+                        <li>就活状況</li>
+                    </a>
+                    <a class="underline" href="">
+                        <li>IT関連</li>
+                    </a>
+                    <a class="underline" href="">
+                        <li>勉強記録</li>
+                    </a>
+
                 </ul>
             </div>
         </header>
         <main>
-            <h1>IT就活まとめ</h1>
+            <h1><span>IT</span>就活まとめ</h1>
             <h2>Blog</h2>
             <div class="vioret-box"></div>
+            <div class="white-box">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+                <div class="bar4"></div>
+            </div>
             <div class="green-box"></div>
             <div class="gray-box"></div>
             <div class="topic">
@@ -38,6 +53,7 @@
 
 
     <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
