新たに見出しを作成

--- a/テストhtml/index.html
+++ b/テストhtml/index.html
@@ -42,10 +42,21 @@
             </div>
             <div class="green-box"></div>
             <div class="gray-box"></div>
-            <div class="topic">
-
-            </div>
+            <div class="topic"></div>
         </main>
+        <div class="articles">
+            <article>
+                <h2>就活状況</h2>
+            </article>
+            <article>
+                <h2>IT関連</h2>
+            </article>
+            <article>
+                <h2>勉強記録</h2>
+            </article>
+
+
+        </div>
 
     </div>
 
