ボタンクリック時のスクロールアニメーションの追加

--- a/テストhtml/index.html
+++ b/テストhtml/index.html
@@ -17,13 +17,13 @@
             </a>
             <div class="menu-bar">
                 <ul>
-                    <a class="underline" href="">
+                    <a class="underline" id="scroll_btn1" href="">
                         <li>就活状況</li>
                     </a>
-                    <a class="underline" href="">
+                    <a class="underline" id="scroll_btn2" href="">
                         <li>IT関連</li>
                     </a>
-                    <a class="underline" href="">
+                    <a class="underline" id="scroll_btn3" href="">
                         <li>勉強記録</li>
                     </a>
 
@@ -46,13 +46,13 @@
         </main>
         <div class="articles">
             <article>
-                <h2>就活状況</h2>
+                <h2 class="rec">就活状況</h2>
             </article>
             <article>
-                <h2>IT関連</h2>
+                <h2 class="it">IT関連</h2>
             </article>
             <article>
-                <h2>勉強記録</h2>
+                <h2 class="study">勉強記録</h2>
             </article>
 
 
