スクロール値の微調整 fontawesomeの追加

--- a/テストhtml/index.html
+++ b/テストhtml/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT情報サイト</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -18,13 +19,13 @@
             <div class="menu-bar">
                 <ul>
                     <a class="underline" id="scroll_btn1" href="">
-                        <li>就活状況</li>
+                        <li>就活状況 <i class="fas fa-briefcase"></i></li>
                     </a>
                     <a class="underline" id="scroll_btn2" href="">
-                        <li>IT関連</li>
+                        <li>IT関連 <i class="fas fa-desktop"></i></li>
                     </a>
                     <a class="underline" id="scroll_btn3" href="">
-                        <li>勉強記録</li>
+                        <li>勉強記録 <i class="fas fa-book-open"></i></li>
                     </a>
 
                 </ul>
