RSSをPHPで取得することができ、やりたいことはできた あとは細かな調整

--- a/テストhtml/index.html
+++ b/テストhtml/index.html
@@ -24,36 +24,66 @@
                     <a class="underline" id="scroll_btn2" href="">
                         <li>IT関連 <i class="fas fa-desktop"></i></li>
                     </a>
-                    <a class="underline" id="scroll_btn3" href="">
-                        <li>勉強記録 <i class="fas fa-book-open"></i></li>
+                    <a class="underline" id="scroll_btn3" " href=" ">
+                        <li>勉強記録 <i class="fas fa-book-open "></i></li>
                     </a>
 
                 </ul>
             </div>
+            <div class="right-box ">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </header>
+        <div class="menu-wrapper ">
+            <div class="side-menu ">
+                <ul>
+                    <li>Udemy</li>
+                    <li>ドットインストール</li>
+                    <li>Progate</li>
+
+                </ul>
+            </div>
+        </div>
         <main>
             <h1><span>IT</span>就活まとめ</h1>
             <h2>Blog</h2>
-            <div class="vioret-box"></div>
-            <div class="white-box">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
-                <div class="bar4"></div>
+            <div class="vioret-box "></div>
+            <div class="white-box ">
+                <div class="bar1 "></div>
+                <div class="bar2 "></div>
+                <div class="bar3 "></div>
+                <div class="bar4 "></div>
             </div>
-            <div class="green-box"></div>
-            <div class="gray-box"></div>
-            <div class="topic"></div>
+            <div class="green-box "></div>
+            <div class="gray-box ">
+            </div>
+            <div class="topic ">
+
+            </div>
         </main>
-        <div class="articles">
+        <div class="articles ">
             <article>
-                <h2 class="rec">就活状況</h2>
+                <h2 class="rec ">就活状況</h2>
+                <p>就職に関するニュース、サイトのまとめ</p>
+                <div class="note ">
+                    <p></p>
+                </div>
             </article>
             <article>
-                <h2 class="it">IT関連</h2>
+                <h2 class="it ">IT関連</h2>
+                <p>IT関連のニュースをまとめます</p>
+                <div class="note ">
+                    <p></p>
+                </div>
             </article>
             <article>
-                <h2 class="study">勉強記録</h2>
+                <h2 class="study ">勉強記録</h2>
+                <p>日々の勉強を記録します</p>
+                <div class="note ">
+                    <p></p>
+                </div>
             </article>
 
 
@@ -64,8 +94,8 @@
 
 
 
-    <script src="./assets/js/jquery.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/jquery.js "></script>
+    <script src="./assets/js/index.js "></script>
 </body>
 
 </html>
